--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             <h1 class="intro2">Hi, I'm <span>Wajahat</span></h1>
             <h1 class="intro2">From Pakistan</h1>
         </div>
-        <div class="img"></div>
+        <div class="img"><img src="Images/profile.png" alt="" srcset=""></div>
     </header>
 
     <div class="body2  position-relative">
         <div class="about d-flex justify-content-center align-items-center">
             <div class="img2">
-                <img src="Images/Profile-removebg-preview.png" alt="" />
+                <img src="Images/profile.png" alt="" />
             </div>
             <div class="About">
                 <h1>About Me</h1>
