--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <header class="d-flex justify-content-between">
         <div class="intro d-flex flex-column">
             <h2>AWS Cloud Technician</h2>
-            <h1 class="intro2">Hi, I'm ---<span>Wajahat</span></h1>
+            <h1 class="intro2">Hi, I'm<span>Wajahat</span></h1>
             <h1 class="intro2">From Pakistan</h1>
         </div>
         <div class="img"><img src="Images/profile.png" alt="" srcset=""></div>
