--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <header class="d-flex justify-content-between">
         <div class="intro d-flex flex-column">
             <h2>AWS Cloud Technician</h2>
-            <h1 class="intro2">Hi, MySelf<span>Wajahat</span></h1>
+            <h1 class="intro2">Hi,<span>Wajahat</span></h1>
             <h1 class="intro2">From Pakistan</h1>
         </div>
         <div class="img"><img src="Images/profile.png" alt="" srcset=""></div>
@@ -34,7 +34,7 @@
             <div class="About">
                 <h1>About Me</h1>
                 <p>
-                    Hi, I’m Muhammad Wajahat Khalil, an IT student and aspiring front-end developer skilled in HTML, CSS, and JavaScript. I hold certifications in Google Technical Support and Meta Intro to Front-End Development, which have enhanced my web development skills. I recently interned at Digital Empowerment Pakistan, focusing on responsive design and performance optimization. Currently,also exploring DevOps and Docker to further my technical expertise. 
+                    Hi, I’m Muhammad Wajahat Khalil, an IT student and aspiring AWS Cloud Technician. I hold certifications in Google Technical Support and Meta Intro to Front-End Development, which have enhanced my web development skills. I recently interned at Digital Empowerment Pakistan, focusing on responsive design and performance optimization. Currently,also exploring DevOps and Docker to further my technical expertise. 
                 </p>
                 <div class="info">
                     <p class="bio act-link" onclick="opentab('skills')">Skills</p>
