--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
             <div class="About">
                 <h1>About Me</h1>
                 <p>
-                    Hi, I’m Muhammad Wajahat Khalil, an IT student and aspiring AWS Cloud Technician. I hold certifications in Google Technical Support and Meta Intro to Front-End Development, which have enhanced my web development skills. I recently interned at Digital Empowerment Pakistan, focusing on responsive design and performance optimization. Currently,also exploring DevOps and Docker to further my technical expertise. 
+                    Hi, I’m Muhammad Wajahat Khalil, an IT student and aspiring AWS Cloud Technician. I hold certifications in Google Technical Support and Meta Intro to Front-End Development.
                 </p>
                 <div class="info">
                     <p class="bio act-link" onclick="opentab('skills')">Skills</p>
