--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
                     <ul>
                         <li><span>HTML/CSS</span><br />Proficient in HTML/CSS</li>
                         <li><span>JAVASCRIPT</span><br />Proficient in JS</li>
-                        <li><span>React</span><br />Had a basic knowldege of react</li>
+                        <li><span>Rect</span><br />Had a basic knowldege of react</li>
                     </ul>
                 </div>
                 <div class="content" id="edu">
