--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
             <div class="About">
                 <h1>About Me</h1>
                 <p>
-                    Hello, I’m Muhammad Wajahat K, an IT student and aspiring AWS Cloud Technician. I hold certifications in Google Technical Support and Meta Intro to Front-End Development.
+                    Hello, I’m Muhammad Wajahat Khalil, an IT student and aspiring AWS Cloud Technician. I hold certifications in Google Technical Support and Meta Intro to Front-End Development.
                 </p>
                 <div class="info">
                     <p class="bio act-link" onclick="opentab('skills')">Skills</p>
