--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
                 <h1>About Me</h1>
                 <p>
                     Hello, I’m Muhammad Wajahat Khalil, an IT student and aspiring AWS Cloud Technician. I hold certifications in Google Technical Support and Meta Intro to Front-End Development.
+                    This is the DevOps preparations
                 </p>
                 <div class="info">
                     <p class="bio act-link" onclick="opentab('skills')">Skills</p>
