--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <header class="d-flex justify-content-between">
         <div class="intro d-flex flex-column">
             <h2>AWS Cloud Technician</h2>
-            <h1 class="intro2">Hi,<span>Wajahat</span></h1>
+            <h1 class="intro2">Hi, I am<span>Wajahat</span></h1>
             <h1 class="intro2">From Pakistan</h1>
         </div>
         <div class="img"><img src="Images/profile.png" alt="" srcset=""></div>
@@ -35,7 +35,7 @@
                 <h1>About Me</h1>
                 <p>
                     Hello, I’m Muhammad Wajahat Khalil, an IT student and aspiring AWS Cloud Technician. I hold certifications in Google Technical Support and Meta Intro to Front-End Development.
-                    This is the DevOps preparations Lab
+                    This is the DevOps preparations Lab Now..
                 </p>
                 <div class="info">
                     <p class="bio act-link" onclick="opentab('skills')">Skills</p>
