--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
     <header class="d-flex justify-content-between">
         <div class="intro d-flex flex-column">
             <h2>AWS Cloud Technician</h2>
-            <h1 class="intro2">Hi, I am<span>Wajahat</span></h1>
-            <h1 class="intro2">From Pakistan</h1>
+            <h1 class="intro2">Hi, I<span>Wajahat</span></h1>
+            <h1 class="intro2">From Islamabad</h1>
         </div>
         <div class="img"><img src="Images/profile.png" alt="" srcset=""></div>
     </header>
